force-app/main/default/objects/Question__c/fields/Assesment__c.field-meta.xml
<CustomField>
    <fullName>Assesment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assesment</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>