force-app/main/default/objects/Question__c/fields/OptionA__c.field-meta.xml
<CustomField>
    <fullName>OptionA__c</fullName>
    <label>OptionA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>