force-app/main/default/objects/Question__c/fields/OptionB__c.field-meta.xml
<CustomField>
    <fullName>OptionB__c</fullName>
    <label>OptionB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>