force-app/main/default/objects/Question__c/fields/OptionC__c.field-meta.xml
<CustomField>
    <fullName>OptionC__c</fullName>
    <label>OptionC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>