force-app/main/default/objects/Question__c/fields/OptionD__c.field-meta.xml
<CustomField>
    <fullName>OptionD__c</fullName>
    <label>OptionD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>