force-app/main/default/objects/Question__c/recordTypes/Java.recordType-meta.xml
<RecordType>
    <fullName>Java</fullName>
    <active>true</active>
    <label>Java</label>
</RecordType>