force-app/main/default/objects/Question__c/recordTypes/salesforce.recordType-meta.xml
<RecordType>
    <fullName>salesforce</fullName>
    <active>true</active>
    <label>salesforce</label>
</RecordType>