force-app/main/default/objects/Question__c/recordTypes/SQL.recordType-meta.xml
<RecordType>
    <fullName>SQL</fullName>
    <active>true</active>
    <label>SQL</label>
</RecordType>