force-app/main/default/objects/Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OptionA__c</columns>
    <columns>OptionB__c</columns>
    <columns>OptionC__c</columns>
    <columns>OptionD__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>