force-app/main/default/objects/Question__c/listViews/Java.listView-meta.xml
<ListView>
    <fullName>Java</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Assesment__c</field>
        <operation>equals</operation>
        <value>Java</value>
    </filters>
    <label>Java</label>
</ListView>