force-app/main/default/objects/Question__c/listViews/salesforce.listView-meta.xml
<ListView>
    <fullName>salesforce</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Assesment__c</field>
        <operation>equals</operation>
        <value>salesforce</value>
    </filters>
    <label>salesforce</label>
</ListView>