force-app/main/default/objects/Question__c/listViews/SQL.listView-meta.xml
<ListView>
    <fullName>SQL</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Assesment__c</field>
        <operation>equals</operation>
        <value>SQL</value>
    </filters>
    <label>SQL</label>
</ListView>